infra/harbor/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: harbor
  name: harbor-ui
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: harbor.127.0.0.1.sstraefik.me
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: harbor-core
            port:
              number: 80
